desctop: header, top, corruption, about, benefits, start projects

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,3 +10,8 @@
 // components
 @import './components/header';
 @import './components/footer';
+@import './components/top';
+@import './components/corruption';
+@import './components/about';
+@import './components/benefits';
+@import './components/projects';
