--- a/app/components/head.html
+++ b/app/components/head.html
@@ -15,6 +15,12 @@
   <meta name="format-detection" content="address=no" />
   <meta name="format-detection" content="email=no" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@300;400;500;600;700;900&family=Open+Sans:wght@600&display=swap"
+    rel="stylesheet"
+  />
   <link rel="stylesheet" href="css/style.min.css" type="text/css" media="all" />
   <link rel="shortcut icon" href="@img/global/favicon.svg" type="image/x-icon" />
 </head>
