--- a/app/components/header.html
+++ b/app/components/header.html
@@ -1,1 +1,14 @@
-<header class="header"></header>
+<header class="header">
+  <div class="header__inner">
+    <a href="#" class="header__logo">
+      <img src="@img/global/logo.png" alt="logo" />
+    </a>
+    <div class="header__menu">
+      <a href="tel:+77767771761" class="header__phone"> +7 776 777-17-61 </a>
+      <a href="tel:+77767771761" class="header__call"> Заказать звонок </a>
+      <a href="#" class="header__whatsapp">
+        <img src="@img/icons/whatsapp.svg" alt="whatsapp" />
+      </a>
+    </div>
+  </div>
+</header>
