--- a/app/scss/assets/ui-kit.scss
+++ b/app/scss/assets/ui-kit.scss
@@ -79,3 +79,114 @@
 .ml-8 {
   margin-left: 8px;
 }
+
+.title-1 {
+  font-weight: 700;
+  font-size: 58px;
+  line-height: 120%;
+  /* or 70px */
+
+  letter-spacing: 0.01em;
+  font-feature-settings: 'kern' off;
+
+  background: linear-gradient(
+    93.87deg,
+    #ffffff 5.56%,
+    rgba(255, 255, 255, 0.9) 84.06%,
+    rgba(255, 255, 255, 0.45) 97.81%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.title-2 {
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 120%;
+  letter-spacing: 0.01em;
+  font-feature-settings: 'kern' off;
+  background: linear-gradient(
+    93.98deg,
+    #ffffff 5.56%,
+    rgba(255, 255, 255, 0.73) 87.58%,
+    rgba(255, 255, 255, 0.38) 100.52%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.title-3 {
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 120%;
+  color: #252525;
+}
+
+.title-4 {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 140%;
+  color: #ffffff;
+}
+
+.title-5 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 120%;
+  color: #252525;
+}
+
+.title-6 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 150%;
+  color: #ffffff;
+}
+
+.accent-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 20px 15px 15px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  color: #ffffff;
+  transition: all 0.3s;
+
+  svg {
+    transition: all 0.3s;
+    margin-right: 15px;
+  }
+  &:hover {
+    background-color: #fff;
+    color: $accent;
+    border: 1px solid $white;
+
+    svg path {
+      fill: $accent;
+    }
+  }
+}
+
+.white-button {
+  background-color: $white;
+  padding: 15px 30px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  color: $accent;
+  transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:hover {
+    background-color: #eee;
+  }
+}
