--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -1,2 +1,39 @@
 .header {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  &__logo img {
+    height: 45px;
+  }
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1880px;
+    padding: 0 30px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  &__menu {
+    display: flex;
+    align-items: center;
+  }
+  &__call,
+  &__phone {
+    font-family: 'Open Sans';
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    color: $white;
+  }
+  &__call {
+    padding: 21px 25px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: none;
+    border-top: none;
+    margin-left: 42px;
+  }
+  &__whatsapp {
+    padding: 21px 28px;
+    height: 100%;
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
+  }
 }
