--- a/app/scss/components/projects.scss
+++ b/app/scss/components/projects.scss
@@ -15,9 +15,21 @@
   &__box {
     display: flex;
   }
-  &__item {
+  .grid-item {
     width: 48%;
     margin-bottom: 40px;
+    transition: opacity 0.3s;
+
+    &.hidden {
+      display: none;
+      opacity: 0;
+    }
+    &.is-visible {
+      display: block;
+      opacity: 1;
+    }
+  }
+  &__item {
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   }
   &__item-name {
@@ -28,4 +40,61 @@
     padding-top: 20px;
     padding-bottom: 25px;
   }
+
+  &__form {
+    background: #2157e9;
+    padding: 40px;
+    max-width: 620px;
+  }
+  &__form-title {
+    margin-bottom: 30px;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 34px;
+    color: $white;
+  }
+  &__form-input {
+    margin-bottom: 0;
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.5);
+    }
+  }
+  &__form-inputWrapper {
+    margin-bottom: 20px;
+    display: flex;
+    align-items: flex-end;
+  }
+  &__form-whiteButton {
+    white-space: nowrap;
+    padding: 15px 30px;
+  }
+  &__form-button {
+    margin-bottom: 20px;
+  }
+
+  .about__form-warning-text {
+    color: #ffffff;
+    opacity: 0.5;
+
+    a {
+      text-decoration: underline;
+      color: #ffffff;
+    }
+  }
+  &__loadMore {
+    padding-top: 20px;
+  }
+  &__loadMore-button {
+    color: $white;
+    background-color: $accent;
+    display: inline-block;
+    width: auto;
+    &:hover {
+      background-color: $dark-accent;
+    }
+  }
+}
+
+.hidden-grid-items {
+  display: none;
 }
