finish info, start fileBanner

--- a/app/components/info.html
+++ b/app/components/info.html
@@ -1,23 +1,217 @@
 <section class="info">
   <div class="info__slider swiper">
     <div class="swiper-wrapper">
-      <div class="info__item swiper-wrapper">
-        <div class="info__item-box">
-          <div class="info__item-description">Работая с нами вы экономите</div>
-          <h3 class="info__item-title title-3">
-            За 10 лет сохранили для наших клиентов более 7 000 000 000 ₸
-          </h3>
-          <ul class="info__item-list">
-            <li class="info__item-text">
-              Объясняем как сэкономить, использовать более выгодные и не менее качественные
-              материалы
-            </li>
-            <li class="info__item-text">
-              Указываем на финансовые, временные потери, перерасход материала
-            </li>
-          </ul>
+      <div class="info__item swiper-slide">
+        <div class="info__item-image">
+          <img src="@img/content/info/item-1.jpg" alt="slider item image" />
+        </div>
+        <div class="info__item-content">
+          <div class="info__item-box">
+            <div class="info__item-description">Работая с нами вы экономите</div>
+            <h3 class="info__item-title title-3">
+              За 10 лет сохранили для наших клиентов более 7 000 000 000 ₸
+            </h3>
+            <ul class="info__item-list">
+              <li class="info__item-text">
+                Объясняем как сэкономить, использовать более выгодные и не менее качественные
+                материалы
+              </li>
+              <li class="info__item-text">
+                Указываем на финансовые, временные потери, перерасход материала
+              </li>
+            </ul>
+          </div>
+          <div class="info__item-box">
+            <div class="info__item-description">Примеры:</div>
+            <div class="info__item-block">
+              <h5 class="info__item-title title-5">
+                На проекте в г. Астана сохранили заказчику более 100 000 000 ₸ на монолитных
+                работах:
+              </h5>
+              <ul class="info__item-list">
+                <li class="info__item-text">
+                  Объясняем как сэкономить, использовать более выгодные и не менее качественные
+                  материалы
+                </li>
+                <li class="info__item-text">
+                  Указываем на финансовые, временные потери, перерасход материала
+                </li>
+              </ul>
+            </div>
+            <div class="info__item-block">
+              <h5 class="info__item-title title-5">
+                На проекте в г. Алматы сохранили более 22 000 000 ₸
+              </h5>
+              <ul class="info__item-list">
+                <li class="info__item-text">
+                  К нам обратилась компания, им уже предоставили справки выполненных работ, наши
+                  специалисты, включая геодезиста, выполнили выездную проверку, сделали полный
+                  перерасчет и выявили завышение бюджета на 35%.
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="info__item swiper-slide">
+        <div class="info__item-image">
+          <img src="@img/content/info/item-1.jpg" alt="slider item image" />
+        </div>
+        <div class="info__item-content">
+          <div class="info__item-box">
+            <div class="info__item-description">Работая с нами вы экономите</div>
+            <h3 class="info__item-title title-3">
+              За 10 лет сохранили для наших клиентов более 7 000 000 000 ₸
+            </h3>
+            <ul class="info__item-list">
+              <li class="info__item-text">
+                Объясняем как сэкономить, использовать более выгодные и не менее качественные
+                материалы
+              </li>
+              <li class="info__item-text">
+                Указываем на финансовые, временные потери, перерасход материала
+              </li>
+            </ul>
+          </div>
+          <div class="info__item-box">
+            <div class="info__item-description">Примеры:</div>
+            <div class="info__item-block">
+              <h5 class="info__item-title title-5">
+                На проекте в г. Астана сохранили заказчику более 100 000 000 ₸ на монолитных
+                работах:
+              </h5>
+              <ul class="info__item-list">
+                <li class="info__item-text">
+                  Объясняем как сэкономить, использовать более выгодные и не менее качественные
+                  материалы
+                </li>
+                <li class="info__item-text">
+                  Указываем на финансовые, временные потери, перерасход материала
+                </li>
+              </ul>
+            </div>
+            <div class="info__item-block">
+              <h5 class="info__item-title title-5">
+                На проекте в г. Алматы сохранили более 22 000 000 ₸
+              </h5>
+              <ul class="info__item-list">
+                <li class="info__item-text">
+                  К нам обратилась компания, им уже предоставили справки выполненных работ, наши
+                  специалисты, включая геодезиста, выполнили выездную проверку, сделали полный
+                  перерасчет и выявили завышение бюджета на 35%.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="info__item swiper-slide">
+        <div class="info__item-image">
+          <img src="@img/content/info/item-1.jpg" alt="slider item image" />
+        </div>
+        <div class="info__item-content">
+          <div class="info__item-box">
+            <div class="info__item-description">Работая с нами вы экономите</div>
+            <h3 class="info__item-title title-3">
+              За 10 лет сохранили для наших клиентов более 7 000 000 000 ₸
+            </h3>
+            <ul class="info__item-list">
+              <li class="info__item-text">
+                Объясняем как сэкономить, использовать более выгодные и не менее качественные
+                материалы
+              </li>
+              <li class="info__item-text">
+                Указываем на финансовые, временные потери, перерасход материала
+              </li>
+            </ul>
+          </div>
+          <div class="info__item-box">
+            <div class="info__item-description">Примеры:</div>
+            <div class="info__item-block">
+              <h5 class="info__item-title title-5">
+                На проекте в г. Астана сохранили заказчику более 100 000 000 ₸ на монолитных
+                работах:
+              </h5>
+              <ul class="info__item-list">
+                <li class="info__item-text">
+                  Объясняем как сэкономить, использовать более выгодные и не менее качественные
+                  материалы
+                </li>
+                <li class="info__item-text">
+                  Указываем на финансовые, временные потери, перерасход материала
+                </li>
+              </ul>
+            </div>
+            <div class="info__item-block">
+              <h5 class="info__item-title title-5">
+                На проекте в г. Алматы сохранили более 22 000 000 ₸
+              </h5>
+              <ul class="info__item-list">
+                <li class="info__item-text">
+                  К нам обратилась компания, им уже предоставили справки выполненных работ, наши
+                  специалисты, включая геодезиста, выполнили выездную проверку, сделали полный
+                  перерасчет и выявили завышение бюджета на 35%.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="info__item swiper-slide">
+        <div class="info__item-image">
+          <img src="@img/content/info/item-1.jpg" alt="slider item image" />
+        </div>
+        <div class="info__item-content">
+          <div class="info__item-box">
+            <div class="info__item-description">Работая с нами вы экономите</div>
+            <h3 class="info__item-title title-3">
+              За 10 лет сохранили для наших клиентов более 7 000 000 000 ₸
+            </h3>
+            <ul class="info__item-list">
+              <li class="info__item-text">
+                Объясняем как сэкономить, использовать более выгодные и не менее качественные
+                материалы
+              </li>
+              <li class="info__item-text">
+                Указываем на финансовые, временные потери, перерасход материала
+              </li>
+            </ul>
+          </div>
+          <div class="info__item-box">
+            <div class="info__item-description">Примеры:</div>
+            <div class="info__item-block">
+              <h5 class="info__item-title title-5">
+                На проекте в г. Астана сохранили заказчику более 100 000 000 ₸ на монолитных
+                работах:
+              </h5>
+              <ul class="info__item-list">
+                <li class="info__item-text">
+                  Объясняем как сэкономить, использовать более выгодные и не менее качественные
+                  материалы
+                </li>
+                <li class="info__item-text">
+                  Указываем на финансовые, временные потери, перерасход материала
+                </li>
+              </ul>
+            </div>
+            <div class="info__item-block">
+              <h5 class="info__item-title title-5">
+                На проекте в г. Алматы сохранили более 22 000 000 ₸
+              </h5>
+              <ul class="info__item-list">
+                <li class="info__item-text">
+                  К нам обратилась компания, им уже предоставили справки выполненных работ, наши
+                  специалисты, включая геодезиста, выполнили выездную проверку, сделали полный
+                  перерасчет и выявили завышение бюджета на 35%.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="info__slider-paginationWrapper">
+      <div class="info__slider-pagination"></div>
     </div>
   </div>
 </section>
