--- a/app/scss/components/top.scss
+++ b/app/scss/components/top.scss
@@ -26,13 +26,15 @@
     max-width: 755px;
     margin-bottom: 60px;
   }
+  &__list-item + .top__list-item {
+    margin-top: 13px;
+  }
   &__list-item {
     position: relative;
     padding-left: 32px;
     font-weight: 400;
     font-size: 20px;
     line-height: 140%;
-    margin-bottom: 13px;
     color: $white;
     &::before {
       content: '';
