--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,3 +15,5 @@
 @import './components/about';
 @import './components/benefits';
 @import './components/projects';
+@import './components/info';
+@import './components/flieBanner';
