--- a/app/scss/components/info.scss
+++ b/app/scss/components/info.scss
@@ -1,2 +1,89 @@
 .info {
+  &__item {
+    display: flex;
+    align-items: stretch;
+  }
+  &__info-slider {
+    max-width: 1920px;
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
+  }
+  &__item-image {
+    width: 50%;
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  &__item-content {
+    width: 50%;
+    background-color: #f5f5f5;
+    padding: 46px 60px;
+  }
+  &__item-box {
+    max-width: 610px;
+    width: 100%;
+    margin-bottom: 40px;
+  }
+  &__item-box + .info__item-box {
+    margin-top: 40px;
+  }
+  &__item-description {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 140%;
+    text-transform: uppercase;
+    color: rgba(37, 37, 37, 0.5);
+    opacity: 0.8;
+    margin-bottom: 15px;
+  }
+  &__item-title {
+    margin-bottom: 20px;
+  }
+  &__item-block + .info__item-block {
+    margin-top: 30px;
+  }
+  &__item-text + .info__item-text {
+    margin-top: 10px;
+  }
+  &__item-text {
+    position: relative;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 140%;
+    color: #252525;
+    opacity: 0.8;
+    padding-left: 32px;
+
+    &::before {
+      content: '';
+      width: 3px;
+      height: 3px;
+      position: absolute;
+      top: 15px;
+      left: 10px;
+      background-color: #252525;
+      opacity: 0.8;
+      border-radius: 50%;
+    }
+  }
+
+  &__slider-paginationWrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 53.15%;
+    z-index: 10;
+    background-color: $accent;
+    .swiper-pagination-progressbar {
+      background-color: #ededed;
+      height: 3px;
+      z-index: 11;
+    }
+    .swiper-pagination-progressbar-fill {
+      background-color: $accent;
+    }
+  }
 }
