--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,1 +1,111 @@
-<footer class="footer" id="contacts"></footer>
+<footer class="footer">
+  <div class="footer__inner container">
+    <div class="footer__contacts">
+      <div class="footer__main-col">
+        <a href="#" class="footer__logo">
+          <img src="@img/global/logo.png" alt="logo" />
+        </a>
+        <div class="footer__main-text">ТОО “Engineering Services”</div>
+        <div class="footer__main-text">БИН 130440013597</div>
+        <div class="footer__main-call">
+          <div class="footer__main-callBox">
+            +7 776 777-17-61
+            <a href="tel:+77767771761"> Заказать звонок </a>
+          </div>
+          <a href="#" class="footer__main-whatsapp">
+            <svg
+              width="44"
+              height="45"
+              viewBox="0 0 44 45"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g clip-path="url(#clip0_82_84)">
+                <path
+                  d="M31.3547 16.0893C28.0638 11.0018 21.3448 9.48927 16.1341 12.6518C11.0606 15.8143 9.41516 22.6894 12.7061 27.7769L12.9803 28.1894L11.8834 32.3144L15.997 31.2144L16.4084 31.4894C18.191 32.4519 20.1107 33.002 22.0304 33.002C24.0872 33.002 26.1441 32.4519 27.9266 31.3519C33.0002 28.0519 34.5085 21.3144 31.3547 16.0893ZM28.4751 26.6769C27.9266 27.5019 27.241 28.0519 26.2812 28.1894C25.7327 28.1894 25.0471 28.4644 22.3046 27.3644C19.9736 26.2644 18.0539 24.4769 16.6826 22.4144C15.8599 21.4519 15.4485 20.2144 15.3114 18.9768C15.3114 17.8768 15.7228 16.9143 16.4084 16.2268C16.6826 15.9518 16.9569 15.8143 17.2311 15.8143H17.9167C18.191 15.8143 18.4652 15.8143 18.6023 16.3643C18.8766 17.0518 19.5622 18.7018 19.5622 18.8393C19.6993 18.9768 19.6993 19.2518 19.5622 19.3893C19.6993 19.6644 19.5622 19.9394 19.4251 20.0769C19.288 20.2144 19.1508 20.4894 19.0137 20.6269C18.7395 20.7644 18.6023 21.0394 18.7395 21.3144C19.288 22.1394 19.9736 22.9644 20.6592 23.6519C21.4819 24.3394 22.3046 24.8894 23.2645 25.3019C23.5387 25.4394 23.813 25.4394 23.9501 25.1644C24.0872 24.8894 24.7728 24.2019 25.0471 23.9269C25.3213 23.6519 25.4585 23.6519 25.7327 23.7894L27.9266 24.8894C28.2009 25.0269 28.4751 25.1644 28.6123 25.3019C28.7494 25.7144 28.7494 26.2644 28.4751 26.6769Z"
+                  fill="white"
+                />
+              </g>
+              <rect x="0.5" y="0.501953" width="43" height="43" stroke="#22263C" />
+              <defs>
+                <clipPath id="clip0_82_84">
+                  <rect width="22" height="22" fill="white" transform="translate(11 11.002)" />
+                </clipPath>
+              </defs>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="footer__contacts-col">
+        <div class="footer__contacts-colItem">
+          <div class="footer__contacts-title">Головной офис в Казахстане</div>
+          <address class="footer__contacts-address footer__contacts-text">
+            г. Ташкент, ​массив Бешёгоч 1/1 г. Астана, ул. Сыганак 17/16, 3 этаж
+          </address>
+          <div class="footer__contacts-phone footer__contacts-text">+7 776 777 17 61</div>
+        </div>
+        <div class="footer__contacts-colItem">
+          <div class="footer__contacts-title">Офис в Узбекистане</div>
+          <address class="footer__contacts-address footer__contacts-text">
+            г. Ташкент, ​массив Бешёгоч 1/1
+          </address>
+          <div class="footer__contacts-phone footer__contacts-text">+99 899 883 56 41</div>
+          <div class="footer__contacts-phone footer__contacts-text">+99 899 353 32 30</div>
+        </div>
+      </div>
+      <div class="footer__contacts-col">
+        <div class="footer__contacts-colItem">
+          <div class="footer__contacts-title">Офис в г. Алматы</div>
+          <address class="footer__contacts-address footer__contacts-text">
+            м-н Жетысу-3, 23Б
+          </address>
+        </div>
+        <div class="footer__contacts-colItem">
+          <div class="footer__contacts-title">Офис в г. Шымкент</div>
+          <address class="footer__contacts-address footer__contacts-text">
+            ул. Ақшатау, 303в
+          </address>
+        </div>
+      </div>
+      <div class="footer__contacts-col">
+        <div class="footer__contacts-colItem">
+          <div class="footer__contacts-title">Офис в г. Атырау</div>
+          <address class="footer__contacts-address footer__contacts-text">
+            ул. Рысбай Габдиев 46
+          </address>
+        </div>
+        <div class="footer__contacts-colItem">
+          <div class="footer__contacts-title">Офис в г. Актау</div>
+          <address class="footer__contacts-address footer__contacts-text">ул. Тетисблу 1а</address>
+        </div>
+      </div>
+    </div>
+    <div class="footer__license">
+      <div class="footer__license-title">Лицензии</div>
+      <div class="footer__license-inner">
+        <p class="footer__license-col">
+          Свидетельство об аккредитации на право осуществления инжиниринговых услуг по техническому
+          надзору на технически и технологически сложных объектах. По объектам первого уровня
+          ответственности № KZ72VWC00092516 Свидетельство об аккредитации на право осуществления
+          экспертных работ по техническому обследованию надежности и устойчивости зданий и
+          сооружений на технически и технологически сложных объектах первого и второго уровней
+          ответственности № KZ13VWC00092608
+        </p>
+        <p class="footer__license-col">
+          Свидетельство об аккредитации на право управления проектами в области архитектуры,
+          градостроительства и строительства № KZ59VWC00076745 Лицензия на инженерно-геодезические
+          работы № 21023075 ТОО "Engineering Services" Сертификат соответствия государственной
+          системы технического регулирования № KZ.Q.01.0720.C22.015742 ТОО "Engineering Services"
+        </p>
+      </div>
+    </div>
+    <div class="footer__copy">
+      <div class="footer__copy-text">© ТОО "Engineering Services" 2013 - 2023</div>
+      <div class="footer__copy-linkBox">
+        <a href="#" class="footer__copy-link">Политика конфиденциальности</a>
+        <a href="#" class="footer__copy-link">Пользовательское соглашение</a>
+        <a href="#" class="footer__copy-link">Политика обработки файлов cookie</a>
+      </div>
+    </div>
+  </div>
+</footer>
