--- a/app/scss/components/footer.scss
+++ b/app/scss/components/footer.scss
@@ -1,2 +1,134 @@
 .footer {
+  padding-top: 80px;
+  padding-bottom: 30px;
+  background-color: $dark-accent;
+
+  &__logo {
+    margin-bottom: 20px;
+    max-width: 164px;
+  }
+  &__contacts {
+    border-bottom: 1px solid #2c3046;
+    padding-bottom: 30px;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+    margin-bottom: 45px;
+  }
+  &__main-text + .footer__main-text {
+    margin-top: 10px;
+  }
+  &__main-text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    color: #ffffff;
+    opacity: 0.6;
+  }
+  &__main-col {
+    // display: flex;
+    // justify-content: space-between;
+  }
+  &__main-call {
+    margin-top: 20px;
+    display: flex;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    color: #ffffff;
+    a {
+      font-family: 'Open Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 17px;
+      line-height: 23px;
+      text-align: center;
+      letter-spacing: 0.01em;
+      color: #7398fa;
+      display: block;
+    }
+  }
+  &__main-whatsapp {
+    margin-left: 25px;
+  }
+  &__contacts-title {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 160%;
+    color: #ffffff;
+  }
+  &__contacts-colItem + .footer__contacts-colItem {
+    margin-top: 32px;
+  }
+  &__contacts-colItem {
+    padding-left: 28px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 300px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-image: url('../images/icons/map.svg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 20px;
+      height: 20px;
+    }
+  }
+  &__contacts-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 160%;
+    color: #cecfd4;
+    font-style: normal;
+  }
+  &__license {
+    padding-bottom: 24px;
+    border-bottom: 1px solid #2c3046;
+    margin-bottom: 25px;
+  }
+  &__license-title {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 150%;
+    color: #ffffff;
+    margin-bottom: 15px;
+  }
+  &__license-inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__license-col {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 150%;
+    color: #ffffff;
+    max-width: 618px;
+    width: 100%;
+  }
+  &__copy {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__copy-linkBox {
+    display: flex;
+    justify-content: space-between;
+    max-width: 856px;
+    width: 100%;
+  }
+  &__copy-text,
+  &__copy-link {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 100%;
+    color: rgba(255, 255, 255, 0.6);
+  }
 }
