--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,3 +17,8 @@
 @import './components/projects';
 @import './components/info';
 @import './components/flieBanner';
+@import './components/personal';
+@import './components/services';
+@import './components/clients';
+@import './components/documentation';
+@import './components/order';
