--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,3 +22,5 @@
 @import './components/clients';
 @import './components/documentation';
 @import './components/order';
+
+@import './components/modals';
