--- a/app/scss/components/clients.scss
+++ b/app/scss/components/clients.scss
@@ -20,10 +20,13 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(4, 1fr);
+    border-top: 1px solid #c1c1c1;
+    margin-right: -1px;
   }
   &__item {
     padding: 30px;
-    border: 1px solid #c1c1c1;
+    border-right: 1px solid #c1c1c1;
+    border-bottom: 1px solid #c1c1c1;
     display: flex;
     justify-content: center;
     align-items: center;
